[project]
name = "daily-rotator"
version = "0.1.0"
description = "A simple daily item rotator"
requires-python = ">=3.10"
dependencies = [
    "python-fasthtml",
    "pytz"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0"
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
